Refactor input handling to use UTF-8 encoding and simplify file reading